--- a/customerdetails.html
+++ b/customerdetails.html
@@ -10,7 +10,7 @@
 <div class="form-container">
 
   <div class="logo">
-    <img src="logo.png" alt="Λογότυπο">
+    <img src="force1-logo-d00.png" alt="Λογότυπο">
   </div>
 
   <h2>Καταχώρηση στοιχείων πελατών Αττικής</h2>
