--- a/order.html
+++ b/order.html
@@ -8,7 +8,7 @@
     <body class="order">
         <img src="force1-logo-d00.png" alt= "force1 " width= "150" heigth= "100" >
         <h1>Εισαγωγή Παραγγελίας</h1>
-        <form action="/submit-order" id="form1id" method="post">
+        <form action="#" method="post">
         <div class="form-group">
             <label for="dateid">Ημερομηνία:</label>
             <input type="date" name="order_date" id="dateid" class="form-group2" required>
